<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:src="@drawable/logo_fix"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_title"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold"
            android:textColor="#07062D"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Silahkan login dulu yah"
            android:textSize="@dimen/slide_desc"
            android:textColor="#07062D"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:met_floatingLabel="highlight"
            android:hint="@string/username_email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_user_circle_1"
            android:drawablePadding="12dp"
            android:textSize="14sp"
            android:textColor="#07062D"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:met_floatingLabel="highlight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_key_1"
            android:drawablePadding="12dp"
            android:textSize="14sp"
            android:textColor="#07062D"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lupa Password?"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_marginTop="14dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom_primary"
            android:text="@string/btn_login"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:paddingRight="22dp"
            android:paddingLeft="22dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_masuk_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_facebook"
            android:drawableLeft="@drawable/ic_facebook_1"
            android:text="@string/login_facebook"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#3B5998"
            android:paddingRight="22dp"
            android:paddingLeft="22dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_masuk_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_google"
            android:drawableLeft="@drawable/ic_google_1"
            android:text="@string/login_google"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#DB4437"
            android:paddingRight="22dp"
            android:paddingLeft="22dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            style="?android:attr/borderlessButtonStyle"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:textColor="#6A6A81"/>

            <TextView
                android:id="@+id/btn_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar_dulu"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#07062D" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>